<resources>
    <string name="app_name">Inventoryapp</string>
    <!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>
    <!-- Toast message in editor when new Book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_Book_successful">Book saved</string>

    <!-- Toast message in editor when new Book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_Book_failed">Error with saving Book</string>


    <!-- Label for cursor feedback message [CHAR LIMIT=30] -->

    <!-- Text hints for fields in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Book Title</string>
    <string name="hint_product_author">Book Author</string>
    <string name="hint_supplier_phone">Phone</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_price">Price</string>

    <!-- Labels for supplier dropdown [CHAR LIMIT=20] -->
    <string name="supplier_select" translatable="false">Select Supplier</string>
    <string name="supplier_unknown">N/A</string>
    <string name="supplier_1">Amazon.com</string>
    <string name="supplier_2">Flipkart</string>
    <string name="supplier_3">ebay</string>
    <string name="supplier_4">martinas</string>

    <!-- Toast messages -->
    <string name="toast_error_saving_product">Error saving the product.</string>
    <string name="toast_error_saving_product_full">Please fill in all required fields and try again.</string>
    <string name="toast_success_product_saved">Product saved with row id: %1$d</string>

    <!-- Labels for editor menu option [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Labels for overflow menu options [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="cursor_message">The books table contains $1$d books.</string>
    <string name="toast_saving_product_full">All Fields are filled correctly, Great job!</string>
    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_update_Book_failed">error updating Book</string>
    <string name="editor_update_Book_successful">update Book successful</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_Book_successful">Book deleted</string>
    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_Book_failed">Error with deleting book</string>
    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>
    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="unknown_supplier">unknown supplier</string>
    <string name="category_measurement">Price per Item</string>
    <string name="unit_product_price">Rs.</string>
    <string name="noLessQuantity">noLessQuantity</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="sale">sale</string>
    <string name="sell_product_failed">Quantity value invalid!</string>
    <string name="call">call</string>
    <string name="order">Order</string>
    <string name="toast_out_of_stock">Out of stock</string>


</resources>
